# MemoPad

./: .gitignore  API.md  API_zh.md  CHANGELOG.md  DEPLOY.md  DEPLOY_zh.md  INSTALL.md  INSTALL_zh.md  LICENSE  README.md  README_zh.md  compose.yml  docker-compose.yml
.github/workflows/: build.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop/src/: App.vue  main.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/api/: client.js
desktop/src/components/: TodoCard.vue
desktop/src/locales/: en.json  zh.json
desktop/src/stores/: app.js
miniprogram/: app.js  app.json  app.wxss  config.example.js  project.config.json
miniprogram/components/badge/: badge.js  badge.wxml  badge.wxss
miniprogram/components/countdown-card/: countdown-card.js  countdown-card.wxml  countdown-card.wxss
miniprogram/components/empty-state/: empty-state.js  empty-state.wxml  empty-state.wxss
miniprogram/components/modal/: modal.js  modal.wxml  modal.wxss
miniprogram/components/stat-card/: stat-card.js  stat-card.wxml  stat-card.wxss
miniprogram/components/todo-item/: todo-item.js  todo-item.wxml  (+1 more)
miniprogram/locales/: en.js  zh.js
miniprogram/utils/: api.js  auth.js  i18n-behavior.js  i18n.js  util.js  websocket.js
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/public/: 429.html
web/src/: App.vue  main.js  style.css
(+64 files in other folders)
